--- a/Manager_Home.html
+++ b/Manager_Home.html
@@ -12,8 +12,10 @@
 <title>Manager Home</title>
 </head>
 <body>
+    
      <div class="heading">
 		<h1 style="color:gray">Store Name</h1>
+        <p>hello Dominic</p>
 	</div>
 
     <nav class="navbar navbar-default">
