--- a/Manager_Home.html
+++ b/Manager_Home.html
@@ -15,7 +15,7 @@
     
      <div class="heading">
 		<h1 style="color:gray">Store Name</h1>
-        <p>hello Dominic</p>
+        <a class="btn btn-default" href="store-logout.php" style="position:absolute; top:0; right:0;">Log Out <b></b></a>
 	</div>
 
     <nav class="navbar navbar-default">
